docker file and tags aws

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,41 @@
 version: "3.9"
-
 services:
-  
-  #RabbitMQ services
-  rabbitmq:
-    container_name: wallaclone-queue-rabbit
-    image: rabbitmq:management-alpine
-    ports:
-      - 15672:15672
-     
-  #MongoDB services
-  mongodb:
-    container_name: wallaclone-db-mongo
-    restart: always
-    image: mongo:latest
-    volumes:
-      - mongodb:/data/db
+  # react-app:
+  #   container_name: wallaclone-frontend
+  #   image: react-app
+  #   restart: always
+  #   stdin_open: true
+  #   ports:
+  #     - "3000:3000"
+  #   networks:
+  #     - wallaclone-app
 
-  #Node production app services
-  api:
-    container_name: wallaclone-apiproduction-node
-    image: node:16.14-alpine3.15
-    volumes:
-      - ./:/app
-    working_dir: /app
+  api-server:  
+    container_name: api-server
+    image: wallaclone-server #image generate dockerfile
     restart: always
-    command: npm start
-    environment:
-      - NODE_ENV=development
-      - PORT=3000
-      - RABBIT_HOST=rabbitmq
-      - RABBIT_PORT=5672
-      - RABBIT_USER=gest
-      - RABBIT_PASSWORD=gest
-      - MONGODB_HOST=mongodb
-      - MONGODB_PORT=27017
     ports:
-      - 80:3000
-      
-  #Node develop app services
-  dev:
-    container_name: wallaclone-apidevelop-node
-    image: node:16.14-alpine3.15
-    volumes:
-      - ./:/app
-    working_dir: /app
+      - "5000:5000"
+    networks:
+      - wallaclone-app
+    depends_on:
+      - mongo
+
+  mongo:
+    container_name: mongo
+    image: mongo:latest
     restart: always
-    command: npm start
-    environment:
-      - NODE_ENV=development
-      - PORT=3000
-      - RABBIT_HOST=rabbitmq
-      - RABBIT_PORT=5672
-      - RABBIT_USER=gest
-      - RABBIT_PASSWORD=gest
-      - MONGODB_HOST=mongodb
-      - MONGODB_PORT=27017
+    ports:
+      - 27017:27017
+    networks:
+      - wallaclone-app
+    volumes:
+      - mongo-data:/data/db
+  
+networks:
+  wallaclone-app:
+    driver: bridge
 
 volumes:
-  mongodb: 
-
-
-    
-
-
+  mongo-data:
+    driver: local
