--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "cross-env NODE_ENV=development DEBUG=nodepop:* nodemon ./bin/www",
-    "test": "cross-env NODE_ENV=test jest integration --verbose --silent"
+    "test": "cross-env NODE_ENV=test jest integration --verbose --silent",
+    "generateSeedData": "node ./scripts/generateSeedData.js",
+    "loadSeedData": "node ./scripts/loadSeedData.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,7 @@
     "url": "https://github.com/Parod88/BackWallaclone/issues"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cross-env": "^5.1.1",
     "debug": "~2.6.9",
@@ -31,10 +33,15 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^6.0.5",
     "multer": "^1.4.4",
-    "socket.io": "^4.4.1"
+    "nodemailer": "^6.7.2",
+    "socket.io": "^4.4.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-node-express": "^1.3.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
+    "faker": "^5.5.3",
     "jest": "^27.4.4",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
